
* GITHUB#15500: Use bulk scoring for filtered HNSW search and for entry-point scoring in the graph. This should
  provide speed improvements when using vector scorers that satisfy the bulk scoring interface. (Ben Trent)

* GITHUB#15498: ExitableDirectoryReader keeps singleton SortedSetDocValues or SortedNumericDocValues as singletons. (Houston Putman)

* GITHUB#15511, GITHUB#15696: Dynamic pruning for SORTED(_SET) fields with doc values skipper (Pan Guixin, Alan Woodward)

* GITHUB#15560: Avoid unnecessary getGraph() call. (Shubham Chaudhary)

* GITHUB#15582: Avoid copying bitset that's subsequently cleared (Viliam Durina)

* GITHUB#15618: SegmentTermsEnumFrame: avoid unnecessary array allocations that waste memory (Misha Dmitriev)

* GITHUB#15585: Added shared prefetch counter to maintain count across clones and slices of MemorySegmentIndexInput. (Shubham Sharma)

* GITHUB#15632: Use a coarser-grained competitive iterator with lower construction costs for
  numeric sorts against fields with DocValuesSkippers. (Alan Woodward)

* GITHUB#15607: Utilize bulk scoring for diversity checking when building HNSW vector indices. This results
  in some performance improvements during indexing and segment merges. (Ben Trent)

Bug Fixes
---------------------
* GITHUB#15442: Preserve boost values when merging overlapping phrases in
  FastVectorHighlighter so highlight scoring fully reflects query boosts.
  (Yang Feng)

* GITHUB#14161: PointInSetQuery's constructor now throws IllegalArgumentException
  instead of UnsupportedOperationException when values are out of order. (Shubham Sharma)

* GITHUB#15205: Fixes regression introduced in GITHUB#13980 where polygons might fail to tessellate
  because the hole bridge is coplanar with the polygon vertex. The fix changes the strategy for
  removing co-planar points to do it once after all holes are removed instead of doing it for each
  removed hole.
